Pipes: A Lazy Data Flow Framework
"http://pipes.tinkerpop.com":http://pipes.tinkerpop.com


h2. Pipes 2.y.z

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-2.png!

h3. Version 2.3.0 (NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.3.0-SNAPSHOT</version>
</dependency>
```

* Added @ShufflePipe@ to gather up all objects then randomize their output.

h3. Version 2.2.0 (December 19, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.2.0</version>
</dependency>
```

* Fixed a comparator bug in @OrderPipe@
* Garbage collector optimized @CycliePathFilterPipe@ to avoid newing a set each iteration
* Added @TransformPipe@ interface to denote a transform operation so path joins are ignored

==<hr/>==

h3. Version 2.1.0 (August 4, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.1.0</version>
</dependency>
```

* Added Travis continuous integration support
* Added getters for getting the high and low end ranges of a @RangeFilterPipe@
* Made exception handling faster with @FastNoSuchElementException@

==<hr/>==

h3. Version 2.0.0 (May 23, 2012)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>2.0.0</version>
</dependency>
```

* @GatherPipe@ no longer locks on looping and is semantically sound for depth-first traversing
* Added @GatherFunctionPipe@ for user provided function to transform the gathered list
* Added @Pipe.enablePath(boolean)@ method to support the turning on/off of path calculations (efficiency reasons)
* Renamed @Pipe.getPath()@ to @Pipe.getCurrentPath()@
* @SideEffectCapPipe@ moved to the @transform@ package as it was wrongly organized in the @sideeffect@ package
* Fixed an indexing issue in @ExhaustMergePipe@ that made itself apparent when two split/merges happened in the same pipeline