@@ -9,7 +9,7 @@ import com.tinkerpop.pipes.Pipe;
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
 public interface FilterPipe<S> extends Pipe<S, S> {
-    enum Filter {
+    public enum Filter {
         EQUAL, NOT_EQUAL, GREATER_THAN, LESS_THAN, GREATER_THAN_EQUAL, LESS_THAN_EQUAL
     }
 }
