@@ -4,4 +4,8 @@ package com.tinkerpop.pipes.transform;
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
 public interface TransformPipe {
+
+    public enum Order {
+        DECR, INCR
+    }
 }
